# gcp-pmle-quiz

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  🏠_Dashboard.py
data/: quizzes.jsonl
models/: questions.py
pages/: 3_🤔_Quiz_Mode.py  5_🇦🇮_Export_for_LM.py
