[project]
name = "quiz"
version = "0.1.0"
description = "Quiz Learner Streamlit app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.52.2",
  "pydantic>=2.12.5",
  "pyvis>=0.3.2",
  "pandas>=2.3.3",
  "diskcache>=5.6.3",
  "plotly>=6.5.0",
]

[project.scripts]
# Console script so tooling (and `uv`) can detect an entrypoint
quiz = "app:main"

# removed the erroneous [tool.uv] section that contained `entry`/`type`
# — `uv` will detect the console script above. If you need tool-specific
# metadata, add it under a namespaced key that `uv` documents.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"